--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,141 +1,185 @@
 .page {
-  --background: #fafafa;
-  --foreground: #fff;
-
-  --text-primary: #000;
-  --text-secondary: #666;
-
-  --button-primary-hover: #383838;
-  --button-secondary-hover: #f2f2f2;
-  --button-secondary-border: #ebebeb;
-
-  display: flex;
-  min-height: 100vh;
-  align-items: center;
-  justify-content: center;
-  font-family: var(--font-geist-sans);
-  background-color: var(--background);
-}
-
-.main {
-  display: flex;
-  min-height: 100vh;
-  width: 100%;
-  max-width: 800px;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: space-between;
-  background-color: var(--foreground);
-  padding: 120px 60px;
-}
-
-.intro {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  text-align: left;
-  gap: 24px;
-}
-
-.intro h1 {
-  max-width: 320px;
-  font-size: 40px;
-  font-weight: 600;
-  line-height: 48px;
-  letter-spacing: -2.4px;
-  text-wrap: balance;
-  color: var(--text-primary);
-}
-
-.intro p {
-  max-width: 440px;
-  font-size: 18px;
-  line-height: 32px;
-  text-wrap: balance;
-  color: var(--text-secondary);
-}
-
-.intro a {
-  font-weight: 500;
-  color: var(--text-primary);
-}
-
-.ctas {
-  display: flex;
-  flex-direction: row;
-  width: 100%;
-  max-width: 440px;
-  gap: 16px;
-  font-size: 14px;
-}
-
-.ctas a {
+  font-family: "Optimistic Text Medium";
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 40px;
-  padding: 0 16px;
-  border-radius: 128px;
-  border: 1px solid transparent;
-  transition: 0.2s;
+  height: 100dvh;
+  background-color: #f5f5f5;
+  position: relative;
+}
+
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+  padding: 8px 16px 14px;
+  text-align: center;
+  background-color: #eff7ff;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+}
+
+.mainContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 3.75rem;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+}
+
+.title {
+  color: rgb(70, 90, 105);
+  font-weight: 400;
+  display: inline;
+  font-size: 13px;
+  white-space: pre-wrap;
+  overflow-wrap: break-word;
+}
+
+.logo img {
+  max-height: 60px;
+  min-height: 0px;
+  object-fit: contain;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  width: 768px;
+}
+
+.form__group {
+  position: relative;
+}
+
+.form__group input {
+  font-size: 16px;
+  font-weight: 400;
+  color: rgb(28, 43, 51);
+  background: rgb(255, 255, 255);
+  border: 1px solid rgb(203, 210, 217);
+  padding: 20px 16px;
+  border-radius: 12px;
+  width: 100%;
+  outline: none;
+  line-height: 1.3;
+}
+
+.form__group label {
+  position: absolute;
+  top: 50%;
+  left: 16px;
+  transform: translateY(-50%);
+  color: rgb(142, 142, 142);
+  font-size: 16px;
+  transition: all 0.2s ease 0s;
+  pointer-events: none;
+  white-space: nowrap;
+  overflow: hidden;
+  font-weight: bold;
+}
+
+.form__group .password {
+  display: none;
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding-right: 16px;
+  padding-top: 20px;
+}
+
+.form__group input:valid + label {
+  top: 0;
+  padding-top: 20px;
+  color: rgb(70, 90, 105);
+  font-weight: 400;
+  display: inline;
+  font-size: 13px;
+  font-family: "Optimistic Text Normal";
+  white-space: pre-wrap;
+  overflow-wrap: break-word;
+}
+
+.form__group input:valid ~ .password {
+  display: block;
+}
+
+.form__group button {
+  font-size: 16px;
+  font-weight: bold;
+  color: rgb(255, 255, 255);
+  background: rgb(24, 119, 242);
+  border: none;
+  border-radius: 50px;
+  padding: 10px 16px;
   cursor: pointer;
-  width: fit-content;
+  transition: all 0.2s ease 0s;
+  width: 100%;
+}
+
+.form__group .forgot {
+  color: rgb(28, 43, 51);
   font-weight: 500;
+  display: inline;
+  font-size: 16px;
+  white-space: pre-wrap;
+  overflow-wrap: break-word;
 }
 
-a.primary {
-  background: var(--text-primary);
-  color: var(--background);
-  gap: 8px;
+.bottomContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  padding-bottom: 20px;
+  gap: 1rem;
+  width: 768px;
+  height: 100%;
 }
 
-a.secondary {
-  border-color: var(--button-secondary-border);
+.bottomContainer .bottomImage {
+  height: 12px;
+  aspect-ratio: 5 / 1;
 }
 
-/* Enable hover only on non-touch devices */
-@media (hover: hover) and (pointer: fine) {
-  a.primary:hover {
-    background: var(--button-primary-hover);
-    border-color: transparent;
-  }
-
-  a.secondary:hover {
-    background: var(--button-secondary-hover);
-    border-color: transparent;
-  }
+.bottomContainer img {
+  height: 100%;
+  width: 100%;
+  object-fit: contain;
 }
 
-@media (max-width: 600px) {
-  .main {
-    padding: 48px 24px;
-  }
-
-  .intro {
-    gap: 16px;
-  }
-
-  .intro h1 {
-    font-size: 32px;
-    line-height: 40px;
-    letter-spacing: -1.92px;
-  }
+.bottomButton button {
+  font-size: 16px;
+  color: rgb(24, 119, 242);
+  background-color: #f5f5f5;
+  border: 1px solid rgb(24, 119, 242);
+  border-radius: 50px;
+  padding: 10px 16px;
+  cursor: pointer;
+  transition: all 0.2s ease 0s;
+  width: 100%;
 }
 
-@media (prefers-color-scheme: dark) {
-  .logo {
-    filter: invert();
-  }
+.bottomContainer .footer {
+  display: flex;
+  font-size: 10px;
+  gap: 1rem;
+  align-items: center;
+  justify-content: center;
+}
 
-  .page {
-    --background: #000;
-    --foreground: #000;
+.bottomContainer .footer a {
+  color: rgb(99, 120, 138);
+}
 
-    --text-primary: #ededed;
-    --text-secondary: #999;
-
-    --button-primary-hover: #ccc;
-    --button-secondary-hover: #1a1a1a;
-    --button-secondary-border: #1a1a1a;
+@media screen and (max-width: 768px) {
+  .form,
+  .bottomContainer {
+    width: 100%;
   }
 }
